--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -122,7 +122,7 @@
         <div class="large-4 columns">
             <div class="row collapse">
               <label>Rotate
-                <select id="opensbp-transforms_rotate_apply" class="opensbp-input">
+                <select id="opensbp-transforms-rotate-apply" class="opensbp-input">
                   <option value="false">Disabled</option>
                   <option value="true">Enabled</option>
                 </select>
@@ -133,7 +133,7 @@
           <div class="row collapse">
             <label>Rotation Angle</label>
             <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms_rotate_angle" class="opensbp-input"/>
+              <input type="number" id="opensbp-transforms-rotate-angle" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
               <span class="postfix">degrees</span>
@@ -144,7 +144,7 @@
           <div class="row collapse">
             <label>X Rotation Point</label>
             <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms_rotate_x" class="opensbp-input"/>
+              <input type="number" id="opensbp-transforms-rotate-x" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
               <span class="postfix">mm</span>
@@ -155,7 +155,7 @@
           <div class="row collapse">
             <label>Y Rotation Point</label>
             <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms_rotate_y" class="opensbp-input"/>
+              <input type="number" id="opensbp-transforms-rotate-y" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
               <span class="postfix">mm</span>
@@ -171,7 +171,7 @@
         <div class="large-4 columns">
             <div class="row collapse">
               <label>Scale
-                <select id="opensbp-transforms_scale_apply" class="opensbp-input">
+                <select id="opensbp-transforms-scale-apply" class="opensbp-input">
                   <option value="false">Disabled</option>
                   <option value="true">Enabled</option>
                 </select>
@@ -182,7 +182,7 @@
           <div class="row collapse">
             <label>Scale X</label>
             <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms_scale_scalex" class="opensbp-input"/>
+              <input type="number" id="opensbp-transforms-scale-scalex" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
               <span class="postfix"></span>
@@ -193,7 +193,7 @@
           <div class="row collapse">
             <label>Scale Y</label>
             <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms_scale_scaley" class="opensbp-input"/>
+              <input type="number" id="opensbp-transforms-scale-scaley" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
               <span class="postfix"></span>
@@ -204,7 +204,7 @@
           <div class="row collapse">
             <label>Scale Z</label>
             <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms_scale_scalez" class="opensbp-input"/>
+              <input type="number" id="opensbp-transforms-scale-scalez" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
               <span class="postfix"></span>
@@ -215,7 +215,7 @@
           <div class="row collapse">
             <label>X Scale Point</label>
             <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms_scale_scalex" class="opensbp-input"/>
+              <input type="number" id="opensbp-transforms-scale-x" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
               <span class="postfix">mm</span>
@@ -226,7 +226,7 @@
           <div class="row collapse">
             <label>Y Scale Point</label>
             <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms_scale_y" class="opensbp-input"/>
+              <input type="number" id="opensbp-transforms-scale-y" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
               <span class="postfix">mm</span>
@@ -237,7 +237,7 @@
           <div class="row collapse">
             <label>Z Scale Point</label>
             <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms_scale_z" class="opensbp-input"/>
+              <input type="number" id="opensbp-transforms-scale-z" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
               <span class="postfix">mm</span>
@@ -253,7 +253,7 @@
         <div class="large-4 columns">
             <div class="row collapse">
               <label>Offset
-                <select id="opensbp-transforms_move_apply" class="opensbp-input">
+                <select id="opensbp-transforms-move-apply" class="opensbp-input">
                   <option value="false">Disabled</option>
                   <option value="true">Enabled</option>
                 </select>
@@ -264,7 +264,7 @@
           <div class="row collapse">
             <label>Offset X</label>
             <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms_move_x" class="opensbp-input"/>
+              <input type="number" id="opensbp-transforms-move-x" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
               <span class="postfix">mm</span>
@@ -275,7 +275,7 @@
           <div class="row collapse">
             <label>Offset Y</label>
             <div class="small-9 columns">
-              <input type="number" id="opensb_transforms_move_y" class="opensbp-input"/>
+              <input type="number" id="opensbp-transforms-move-y" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
               <span class="postfix">mm</span>
@@ -286,32 +286,10 @@
           <div class="row collapse">
             <label>Offset Z</label>
             <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms_move_z" class="opensbp-input"/>
+              <input type="number" id="opensbp-transforms-move-z" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
               <span class="postfix">mm</span>
-            </div>
-          </div> 
-        </div>
-        <div class="large-4 columns">
-          <div class="row collapse">
-            <label>Shear Angle X</label>
-            <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms_shearx_angle" class="opensbp-input"/>
-            </div>
-            <div class="small-3 columns">
-              <span class="postfix">degrees</span>
-            </div>
-          </div> 
-        </div>
-        <div class="large-4 columns">
-          <div class="row collapse">
-            <label>Shear Angle Y</label>
-            <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms_sheary_angle" class="opensbp-input"/>
-            </div>
-            <div class="small-3 columns">
-              <span class="postfix">degrees</span>
             </div>
           </div> 
         </div>
@@ -321,21 +299,34 @@
     <div class="row">
       <fieldset>
         <legend>Shear X</legend>
-        <div class="large-4 columns">
+          <div class="large-4 columns">
             <div class="row collapse">
-              <label>Shear X
-                <select id="opensbp-transforms_shearx_apply" class="opensbp-input">
-                  <option value="false">Disabled</option>
-                  <option value="true">Enabled</option>
-                </select>
-              </label>
+              <label>Shear Angle X</label>
+              <div class="small-9 columns">
+                <input type="number" id="opensbp-transforms-shearx-angle" class="opensbp-input"/>
+              </div>
+              <div class="small-3 columns">
+                <span class="postfix">degrees</span>
+              </div>
+            </div> 
+          </div>
+        <div class="large-4 columns">
+          <div class="row collapse">
+            <label>Shear Angle Y</label>
+            <div class="small-9 columns">
+              <input type="number" id="opensbp-transforms-sheary-angle" class="opensbp-input"/>
             </div>
+            <div class="small-3 columns">
+              <span class="postfix">degrees</span>
+            </div>
+          </div> 
         </div>
+
         <div class="large-4 columns">
           <div class="row collapse">
             <label>Shear Angle X</label>
             <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms_shearx_angle" class="opensbp-input"/>
+              <input type="number" id="opensbp-transforms-shearx-angle" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
               <span class="postfix">degrees</span>
@@ -351,7 +342,7 @@
         <div class="large-4 columns">
             <div class="row collapse">
               <label>Shear Y
-                <select id="opensbp-transforms_sheary_apply" class="opensbp-input">
+                <select id="opensbp-transforms-sheary-apply" class="opensbp-input">
                   <option value="false">Disabled</option>
                   <option value="true">Enabled</option>
                 </select>
@@ -362,7 +353,7 @@
           <div class="row collapse">
             <label>Shear Angle Y</label>
             <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms_sheary_angle" class="opensbp-input"/>
+              <input type="number" id="opensbp-transforms-sheary-angle" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
               <span class="postfix">degrees</span>
@@ -378,7 +369,7 @@
         <div class="large-4 columns">
             <div class="row collapse">
               <label>Interpolate
-                <select id="opensbp-transforms_interpolate_apply" class="opensbp-input">
+                <select id="opensbp-transforms-interpolate-apply" class="opensbp-input">
                   <option value="false">Disabled</option>
                   <option value="true">Enabled</option>
                 </select>
@@ -394,7 +385,7 @@
         <div class="large-4 columns">
             <div class="row collapse">
               <label>Level
-                <select id="opensbp-transforms_level_apply" class="opensbp-input">
+                <select id="opensbp-transforms-level-apply" class="opensbp-input">
                   <option value="false">Disabled</option>
                   <option value="true">Enabled</option>
                 </select>
@@ -405,7 +396,7 @@
           <div class="row collapse">
             <label>Leveling Data File</label>
             <div class="small-9 columns">
-              <input type="text" id="opensbp-transforms_level_ptDataFile" class="opensbp-input"/>
+              <input type="text" id="opensbp-transforms-level-ptDataFile" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
               <span class="postfix">browse</span>
@@ -1655,8 +1646,6 @@
         var v = parts[1];
         if(v === "gdi") {
           new_config.driver.gdi = this.value;
-          console.log("Distance mode = " + JSON.stringify(new_config));
-          console.log("this.value = " + this.value);
           if (this.value == 0) { fabmo.runGCode("G90"); }
           else { fabmo.runGCode("G91"); }
           fabmo.setConfig(new_config, function(err, data) {
@@ -1682,10 +1671,11 @@
       });
 
       $('.opensbp-values').change( function() {
-        var parts = this.id.split("_");
+        var parts = this.id.split("-");
         var new_config = {};
         new_config.driver = {};
         var v = parts[1];
+
         if (!configData) { return;}
         if(v !== undefined) {
           if(v === "units1"){
@@ -1707,7 +1697,7 @@
             new_config.driver['6tr']=(360/configData.driver["6sa"])*configData.driver["6mi"]/this.value;
           } 
         }
-        console.log("units = " + JSON.stringify(new_config));
+        // console.log("units = " + JSON.stringify(new_config));
         fabmo.setConfig(new_config, function(err, data) {
           setTimeout(update, 500);
         });
