--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -23,9 +23,8 @@
     <ul class="left" role="tablist" data-tab>
       <li class="active"><a id="nav-pending" href="#tabpending">Pending</a></li>
       <li class=""><a id="nav-history" href="#tabhistory">History</a></li>
-      
     </ul>
-    <ul class="right">
+    <ul class="left">
       <li><a id="nav-submit" class="submit-button" href="#">Submit Job...</a></li>
     </ul>
   </section>
