Clean up Shear section on Configuration page

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -301,6 +301,16 @@
         <legend>Shear X</legend>
           <div class="large-4 columns">
             <div class="row collapse">
+              <label>Shear X
+                <select id="opensbp-transforms-shearx-apply" class="opensbp-input">
+                  <option value="false">Disabled</option>
+                  <option value="true">Enabled</option>
+                </select>
+              </label>
+            </div>
+          </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
               <label>Shear Angle X</label>
               <div class="small-9 columns">
                 <input type="number" id="opensbp-transforms-shearx-angle" class="opensbp-input"/>
@@ -309,30 +319,7 @@
                 <span class="postfix">degrees</span>
               </div>
             </div> 
-          </div>
-        <div class="large-4 columns">
-          <div class="row collapse">
-            <label>Shear Angle Y</label>
-            <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms-sheary-angle" class="opensbp-input"/>
-            </div>
-            <div class="small-3 columns">
-              <span class="postfix">degrees</span>
-            </div>
-          </div> 
-        </div>
-
-        <div class="large-4 columns">
-          <div class="row collapse">
-            <label>Shear Angle X</label>
-            <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms-shearx-angle" class="opensbp-input"/>
-            </div>
-            <div class="small-3 columns">
-              <span class="postfix">degrees</span>
-            </div>
-          </div> 
-        </div>
+          </div>  
       </fieldset>
     </div>
 
@@ -349,6 +336,7 @@
               </label>
             </div>
         </div>
+
         <div class="large-4 columns">
           <div class="row collapse">
             <label>Shear Angle Y</label>
