--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -11,7 +11,9 @@
   </head>
 
   <body>
-    
+  <form>
+  <input type="file" id="hidden-file-input" style="position: fixed; top:-1000" />
+  </form>
 <div id="spinner"></div>
    <div class="collapseLeft"></div>
       <div id="main" class="off-canvas-wrap" data-offcanvas>
