More life-breaking changes

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -488,6 +488,7 @@
 	});
 
 	$('#file').change(function(evt) {
+		console.log("Submitting job....");
 		fabmo.submitJob($('#fileform'), {}, function(err, data) {
 			resetFormElement($('#file'));
 			refresh_jobs_list();
